# vpn

./: Cargo.toml  README.md
docs/: FOXRAY.md  IMPROVEMENTS.md
examples/: foxray_config.json
scripts/: generate-certs.sh
src/: auth.rs  camouflage.rs  config.rs  crypto.rs  main.rs  metrics.rs  profile.rs  server.rs  tunnel.rs
src/dns/: mod.rs
src/protocol/: error.rs  http.rs  metrics.rs  mod.rs  pool.rs  tcp.rs  tls.rs  websocket.rs
src/routing/: mod.rs
src/traffic/: mod.rs
tests/: integration_test.rs
