[package]
name = "vpn"
version = "0.1.0"
edition = "2021"
authors = ["VPN Server Developer"]
description = "A high-performance VPN server with FoxRay support"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
uuid = { version = "1.7", features = ["v4"] }
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
tokio-tun = "0.11"
ipnetwork = "0.20"
bytes = "1.5"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
tokio-tungstenite = "0.21"
tungstenite = "0.20"
http = "1.0"
headers = "0.3"
async-trait = "0.1"
futures-util = "0.3"
hyper = { version = "1.1", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
test-log = "0.2"
env_logger = "0.10"
